Wall Page Structure
I built the structure for the wall page. This will allow for backend integration. CSS/styling to follow shortly. All titles are temporary placeholders for clarity.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -52,12 +52,50 @@
     text-align: center;
 }
 
+.search{
+  background-color: lightgray;
+  border-radius:5%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 .wall{
-  background-color: gray;
     border-radius:5%;
     justify-content: center;
     align-items: center;
     text-align: center;
     padding-bottom: 1.25rem;
+    overflow: scroll;
+}
+
+.posts{
+  background-color: lightgray;
+  border-radius:5%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-bottom: 1.25rem;
+}
+
+.wallstuff{
+  border-radius:5%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 1.25rem;
+    padding-top: 1.25rem;
+    background-color: darkgray;
+    height: 60vh;
+}
+
+.repobox{
+  background-color: slategray;
+  border: solid black ;
+}
+
+.postbox{
+background-color: teal;
+  border: solid black ;
 }
 /* End of Wall Page CSS */
