--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,3 +51,119 @@ a{
   text-decoration: none;
 }
 /* End of Navbar */
+
+/* Login Page CSS */
+.loginform{
+  color: purple;
+  font-size: x-large;
+  align-items: center !important;
+  justify-content: center !important;
+  background-color: #a8a8a8;
+  border: 5px solid;
+  border-image: linear-gradient(45deg, purple, orange) 1;
+  box-shadow: 1.25rem 1.25rem 1.25rem 1.25rem grey;
+  max-width: 50%;
+  max-height: 50%;
+}
+
+.libtn{
+  background-color: purple !important;
+  border: purple !important;
+}
+
+.libtn:hover{
+  background-color: orange;
+  border: orange;
+  padding: 1.25rem;
+}
+
+.odieIMG{
+  align-items: center !important;
+  justify-content: center !important;
+  text-align: center;
+}
+/* End of LoginPage CSS */
+
+/* Wall Page CSS */
+.maincontent{
+  height: 100vh;
+  padding: 1.25rem;
+}
+
+.devs{
+  background-color: lightgray;
+  border-radius:5%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.notifications{
+    background-color: darkgray;
+    border-radius:5%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.search{
+  background-color: lightgray;
+  border-radius:5%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.wall{
+    border-radius:5%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 1.25rem;
+    overflow: scroll;
+}
+
+.posts{
+  background-color: lightgray;
+  border-radius:5%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-bottom: 1.25rem;
+}
+
+.wallstuff{
+  border-radius:5%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 1.25rem;
+    padding-top: 1.25rem;
+    background-color: darkgray;
+    height: 60vh;
+}
+
+.repobox{
+  background-color: slategray;
+  border: solid black ;
+}
+
+.postbox{
+background-color: teal;
+  border: solid black ;
+}
+/* End of Wall Page CSS */
+
+/* Profile Page CSS */
+
+/* Some Profile CSS shared with wall page */
+
+.connecteddevs{
+  background-color: darkgray;
+  border-radius:5%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+/* End of Profile Page CSS */
