Worked on creating flex boxes for repos display

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,3 +51,23 @@ a{
   text-decoration: none;
 }
 /* End of Navbar */
+
+/* Profile */
+.boxOut{
+  box-shadow: rgba(255, 165, 0, 0.4) 5px 5px,
+    rgba(240, 46, 170, 0.3) 10px 10px,
+    rgba(240, 46, 170, 0.2) 15px 15px,
+    rgba(240, 46, 170, 0.1) 20px 20px,
+    rgba(240, 46, 170, 0.05) 25px 25px,
+    rgba(255, 165, 0, 0.4) -5px -5px,
+    rgba(240, 46, 170, 0.3) -10px -10px,
+    rgba(240, 46, 170, 0.2) -15px -15px,
+    rgba(240, 46, 170, 0.1) -20px -20px,
+    rgba(240, 46, 170, 0.05) -25px -25px;
+}
+
+.mainLay{
+  min-width: none;
+  max-width: 756px;
+}
+/* End of Profile */
