--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,6 +34,7 @@
 .maincontent{
   height: 100vh;
   padding: 1.25rem;
+  background-color:  #212529;
 }
 
 .devs{
@@ -66,7 +67,7 @@
     align-items: center;
     text-align: center;
     padding-bottom: 1.25rem;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .posts{
