--- a/client/src/App.css
+++ b/client/src/App.css
@@ -165,46 +165,31 @@ body {
 }
 
 .wallstuff{
-    border-radius:5%;
+    border-radius:round;
     justify-content: center;
     align-items: center;
     text-align: center;
     padding-bottom: 1.25rem;
     padding-top: 1.25rem;
-    height: 60vh;
-    
+    height: 60vh;    
 }
 
 .repobox{
-  background-color: lightgray;
-  box-shadow: rgba(255, 165, 0, 0.4) 5px 5px,
-    rgba(240, 46, 170, 0.3) 10px 10px,
-    rgba(240, 46, 170, 0.2) 15px 15px,
-    rgba(240, 46, 170, 0.1) 20px 20px,
-    rgba(240, 46, 170, 0.05) 25px 25px,
-    rgba(255, 165, 0, 0.4) -5px -5px,
-    rgba(240, 46, 170, 0.3) -10px -10px,
-    rgba(240, 46, 170, 0.2) -15px -15px,
-    rgba(240, 46, 170, 0.1) -20px -20px,
-    rgba(240, 46, 170, 0.05) -25px -25px;
-  margin-bottom: 1.25rem;
-  border-radius: 5%;
+  border-color: purple;
+  margin-bottom: 1.50rem;
+  border-radius: round;
+  background-color: transparent;
+  font-family: 'Bebas Neue', cursive;
+  color: orange;
 }
 
 .postbox{
-  background-color: lightgray;
-  box-shadow: rgba(255, 165, 0, 0.4) 5px 5px,
-    rgba(240, 46, 170, 0.3) 10px 10px,
-    rgba(240, 46, 170, 0.2) 15px 15px,
-    rgba(240, 46, 170, 0.1) 20px 20px,
-    rgba(240, 46, 170, 0.05) 25px 25px,
-    rgba(255, 165, 0, 0.4) -5px -5px,
-    rgba(240, 46, 170, 0.3) -10px -10px,
-    rgba(240, 46, 170, 0.2) -15px -15px,
-    rgba(240, 46, 170, 0.1) -20px -20px,
-    rgba(240, 46, 170, 0.05) -25px -25px;
-  margin-bottom: 1.25rem;
-  border-radius: 5%;
+  border-color: purple;
+  margin-bottom: 1.50rem;
+  border-radius: round;
+  background-color: transparent;
+  font-family: 'Bebas Neue', cursive;
+  color: orange;
 }
 
 .buttons{
