--- a/client/src/App.css
+++ b/client/src/App.css
@@ -172,24 +172,55 @@ body {
     padding-bottom: 1.25rem;
     padding-top: 1.25rem;
     height: 60vh;    
+    overflow: auto;
+}
+
+.wallstuff::-webkit-scrollbar {
+  width: 10px;
+}
+
+.wallstuff::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+
+.wallstuff::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: black(255,0,0,0.8); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+  
 }
 
 .repobox{
-  border-color: purple;
-  margin-bottom: 1.50rem;
-  border-radius: round;
-  background-color: transparent;
+  align-items: center;
+  box-shadow: 
+    14px 14px 18px 0 rgba(0, 0, 0, 0.25),
+    -6px -6px 10px 0 rgba(255, 255, 255, 0.3);
+  border-radius: 50px;
+  display: flex;
+  height: 200px;
+  justify-content: center;
   font-family: 'Bebas Neue', cursive;
   color: orange;
+  margin-top: 1.75rem;
+  margin-bottom: 1.75rem;
 }
 
 .postbox{
-  border-color: purple;
-  margin-bottom: 1.50rem;
-  border-radius: round;
-  background-color: transparent;
+  align-items: center;
+  box-shadow: 
+    14px 14px 18px 0 rgba(0, 0, 0, 0.25),
+    -6px -6px 10px 0 rgba(255, 255, 255, 0.3);
+  border-radius: 50px;
+  display: flex;
+  height: 200px;
+  justify-content: center;
   font-family: 'Bebas Neue', cursive;
   color: orange;
+  margin-top: 1.75rem;
+  margin-bottom: 1.75rem;
 }
 
 .buttons{
